--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
     implementation("net.minestom:minestom-snapshots:8f46913486")
     implementation("ch.qos.logback:logback-classic:1.5.7")
+    implementation("org.fusesource.jansi:jansi:2.4.1")
 }
 
 tasks.register("createLibrariesFile", CreateTextFile) {
