--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
-rootProject.name = "PhotonCore"
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+    }
+}
+
+rootProject.name = "PolarisCore"
