--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Setup gradle
-        uses: gradle/actions/setup-gradle@v3
+      - name: Give permissions to Gradle
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
         run: ./gradlew jar
