Try to fix the commit count counter

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Get version
+        run: |
+          COMMIT_COUNT=$(curl -s "https://api.github.com/repos/polaris-core/PolarisCore/commits?sha=main" | grep -o '"sha":' | wc -l)
+          echo "COMMIT_COUNT=$COMMIT_COUNT" >> $GITHUB_ENV
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -38,8 +43,7 @@ jobs:
           file_name_no_ext="${jar_file%.jar}"
           formatted_name=$(echo "$file_name_no_ext" | sed 's/-/ /g')
           
-          commit_count=$(git rev-list --count HEAD)
-          gh release create "${commit_count}" build/libs/PolarisCore**.jar \
+          gh release create "${{ env.COMMIT_COUNT }}" build/libs/PolarisCore**.jar \
               --repo="$GITHUB_REPOSITORY" \
               --title="${formatted_name}" \
               --generate-notes
