--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = "dev.polariscore"
-version = "1.21-" + (System.getenv("COMMIT_COUNT") == null ? "dev" : System.getenv("COMMIT_COUNT"))
+version = "1.21-" + (System.getenv("VERSION") == null ? "dev" : System.getenv("VERSION"))
 base.archivesName.set("PolarisCore")
 
 repositories {
