--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,17 +32,17 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: PolarisCore
-          path: build/libs/PolarisCore**.jar
+          name: Ethylene
+          path: build/libs/Ethylene**.jar
 
       - name: Create Release
         if: ${{ format('refs/heads/{0}', github.event.repository.default_branch) == github.ref }}
         run: |
-          jar_file=$(basename build/libs/PolarisCore**.jar)
+          jar_file=$(basename build/libs/Ethylene**.jar)
           file_name_no_ext="${jar_file%.jar}"
           formatted_name=$(echo "$file_name_no_ext" | sed 's/-/ /g')
           
-          gh release create "${{ github.run_number }}" build/libs/PolarisCore**.jar \
+          gh release create "${{ github.run_number }}" build/libs/Ethylene**.jar \
               --repo="$GITHUB_REPOSITORY" \
               --title="${formatted_name}" \
               --generate-notes
