--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,7 @@ minecraftVersion=1.21.5
 # Libraries
 # https://mvnrepository.com/artifact/net.minestom/minestom-snapshots
 minestomVersion=e94aaed297
-# https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
+# https://github.com/qos-ch/logback/releases
 logbackVersion=1.5.18
+# https://mvn.everbuild.org/#/public/org/everbuild/blocksandstuff/blocksandstuff-common
+blocksAndStuffVersion=1.2.0-SNAPSHOT
