feat: Add trove library

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,13 +2,14 @@
 minestom = "1_21_6-c3ccee696b" # https://mvnrepository.com/artifact/net.minestom/minestom-snapshots
 logback = "1.5.18" # https://github.com/qos-ch/logback/releases
 blocksandstuff = "1.4.0-SNAPSHOT" # https://mvn.everbuild.org/#/public/org/everbuild/blocksandstuff
-
+#loot-tables = "3.0" # https://github.com/GoldenStack/trove/releases
 
 [libraries]
 minestom = { group = "net.minestom", name = "minestom-snapshots", version.ref = "minestom" }
 logback = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logback" }
 blocks = { group = "org.everbuild.blocksandstuff", name = "blocksandstuff-blocks", version.ref = "blocksandstuff"}
 fluids = { group = "org.everbuild.blocksandstuff", name = "blocksandstuff-fluids", version.ref = "blocksandstuff"}
+#loot-tables = { group = "net.goldenstack", name = "trove", version.ref = "loot-tables" }
 
 [bundles]
 server = ["minestom", "logback", "blocks", "fluids"]
