chore(libs): Upgrade

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-minestom = "1_21_6-c3ccee696b" # https://mvnrepository.com/artifact/net.minestom/minestom-snapshots
-logback = "1.5.18" # https://github.com/qos-ch/logback/releases
-blocksandstuff = "1.4.0-SNAPSHOT" # https://mvn.everbuild.org/#/public/org/everbuild/blocksandstuff
+minestom = "2025.10.18-1.21.10" # https://mvnrepository.com/artifact/net.minestom/minestom-snapshots
+logback = "1.5.20" # https://github.com/qos-ch/logback/releases
+blocksandstuff = "1.9.0-SNAPSHOT" # https://mvn.everbuild.org/#/public/org/everbuild/blocksandstuff
 #loot-tables = "3.0" # https://github.com/GoldenStack/trove/releases
 #minestom-fluids = "48ccf450d8"
 
 [libraries]
-minestom = { group = "net.minestom", name = "minestom-snapshots", version.ref = "minestom" }
+minestom = { group = "net.minestom", name = "minestom", version.ref = "minestom" }
 logback = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logback" }
 blocks = { group = "org.everbuild.blocksandstuff", name = "blocksandstuff-blocks", version.ref = "blocksandstuff"}
 fluids = { group = "org.everbuild.blocksandstuff", name = "blocksandstuff-fluids", version.ref = "blocksandstuff"}
